[tool.poetry]
name = "aiomonobnk"
version = "0.5.4"
description = "Sync/Async version Monobank api"
authors = ["yeghorkikhai <yeghorkikhai@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ecdsa = "^0.18.0"
pydantic = "^2.0.2"
pytest = "^7.4.0"
aiohttp = "^3.8.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
